2012-10-18  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Remove unused variable.
        * EcControl.m: Yse -hostWithWellKnownName: in preference to
        -hostWithName: when trying to find/match hosts.

2012-10-05  Richard Frith-Macdonald <rfm@gnu.org>

        Initial (1.0) release.
