@@ -1,3 +1,13 @@
+2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcCommand.m:
+	* EcConsole.m:
+	* EcControl.m:
+	* EcLogger.m:
+	* EcProcess.h:
+	* EcProcess.m:
+	Use NSInteger argument for -cmdQuit:
+	
 2012-10-18  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcProcess.m: Remove unused variable.
